<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center"
    style="@style/Base.Theme.NinetyPlus">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/getstarted_page_img_bgblue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/get_started_title"
        android:textAlignment="center"
        style="@style/Base.Theme.NinetyPlus"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/onboarding_screen1_description"
        android:textAlignment="center"
        style="@style/Base.Theme.NinetyPlus"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:padding="8dp"
            android:text="@string/signin"
            android:textSize="20sp"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:padding="8dp"
            android:text="@string/signup"
            android:textSize="20sp"
            app:cornerRadius="12dp" />
    </LinearLayout>

</LinearLayout>