<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Tarih seçim butonları -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/start_date_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/filter_start_date" />

        <Button
            android:id="@+id/end_date_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/filter_end_date"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Filtreleme ve sıfırla butonları -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_filter"
            />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_filter"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <!-- Yükleniyor çemberi -->
    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <!-- Lig listesi için RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_leagues"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"/>

    <!-- Maç listesi için RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_matcheslist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="8dp"/>

</LinearLayout>
