<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_register_gradient_background"
    tools:context=".ui.activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/md_theme_light_onSecondary"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/md_theme_light_secondary"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_email"
                android:background="@drawable/custom_edittext_secondary"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email_text"
                android:drawableLeft="@drawable/ic_baseline_person_24_secondary"
                android:drawablePadding="8dp"
                android:textColor="@color/md_theme_light_textColor"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:background="@drawable/custom_edittext_secondary"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password_text"
                android:drawableLeft="@drawable/ic_baseline_lock_24_secondary"
                android:drawablePadding="8dp"
                android:textColor="@color/md_theme_light_textColor"
                android:inputType="textPassword"/>

            <CheckBox
                android:id="@+id/show_password_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                android:textColor="@color/md_theme_light_secondary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signin"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/md_theme_light_secondary"
                app:cornerRadius="50dp"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:text="@string/dialog_forgot_password_title"
                android:textColor="@color/md_theme_light_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirectText"
                android:text="@string/redirect_to_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/md_theme_light_secondary"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
