<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    style="@style/Base.Theme.NinetyPlus"
    android:background="@drawable/login_register_gradient_background"
    tools:context=".ui.activity.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        style="@style/Base.Theme.NinetyPlus"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            style="@style/Base.Theme.NinetyPlus"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                style="@style/Base.Theme.NinetyPlus"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_email"
                android:background="@drawable/custom_edittext_primary"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email_text"
                android:drawableLeft="@drawable/ic_baseline_person_24_primary"
                android:drawablePadding="8dp"
                style="@style/Base.Theme.NinetyPlus"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_password"
                android:background="@drawable/custom_edittext_primary"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password_text"
                android:drawableLeft="@drawable/ic_baseline_lock_24_primary"
                android:drawablePadding="8dp"
                style="@style/Base.Theme.NinetyPlus"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signup"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textColor="@color/white"
                app:cornerRadius = "50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/redirect_to_login_text"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                style="@style/Base.Theme.NinetyPlus"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>